# thirdproject

./: .env  .env.example  docker-compose.yml
services/pascal-legacy/: Dockerfile  docker-compose.override.yml  legacy.pas
services/php-web/: Dockerfile  entrypoint.sh
services/php-web/laravel-patches/: .env
services/php-web/laravel-patches/public/css/: app.css
services/php-web/laravel-patches/public/js/: animations.js  filters.js  websocket.js
services/php-web/laravel-patches/resources/views/: apod.blade.php  dashboard.blade.php  iss.blade.php  neo.blade.php  search.blade.php  spacex.blade.php
services/php-web/laravel-patches/routes/: web.php
services/rust-iss/: .env  .env.example  Cargo.toml  Dockerfile
services/rust-iss/migration/src/: lib.rs  m20251211_104822_create_tables.rs  m_create_tables.rs
services/rust-iss/src/: cache.rs  database.rs  main.rs  validation.rs  websocket.rs
services/rust-iss/src/controllers/: iss_controller.rs  legacy_controller.rs  mod.rs  osdr_controller.rs  space_controller.rs
services/rust-iss/src/domain/: iss.rs  legacy.rs  mod.rs  telemetry.rs
services/rust-iss/src/entities/: cms_pages.rs  iss_fetch_log.rs  legacy_events.rs  mod.rs  osdr_items.rs  space_cache.rs  telemetry_legacy.rs  telemetry_legasy.rs
services/rust-iss/src/middleware/: rate_limit.rs
services/rust-iss/src/repositories/: iss_repository.rs  legacy_repository.rs  mod.rs  osdr_repository.rs  space_repository.rs
services/rust-iss/src/services/: iss_service.rs  legacy_service.rs  mod.rs  osdr_service.rs  space_service.rs
(+5 files in other folders)
