[package]
name = "rust_iss"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# WebSocket
tokio-tungstenite = "0.20"
futures-util = { version = "0.3", features = ["sink"] }

# Broadcast channels
async-broadcast = "0.5"

# Additional
tokio-stream = "0.1"

redis = { version = "0.23", features = ["tokio-native-tls", "aio", "tokio-comp"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["full"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono"] }
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
sea-query = "0.32"
async-trait = "0.1.89"
